# siggraph2025-wave-noise

./: README.md  index.html  style.css
GUI/: README.md  index.html  style.css
code/: Readme.md
code/WaveNoise/: CMakeLists.txt
code/easycppogl/: CMakeLists.txt
code/easycppogl-master/: CMakeLists.txt
code/easycppogl-master/Examples/: CMakeLists.txt  animation.cpp  compute.cpp  compute_textures.cpp  compute_vbos.cpp  deferred.cpp  env_map.cpp  implicit_geom.cpp  mesh_texture_fbo.cpp  obj_viewer.cpp  perface.cpp  spiral.cpp  tbn.cpp  tesselation_bezier_tri2.cpp  tesselation_curve.cpp  tesselation_terrain.cpp  tesselation_tri_quad.cpp  texture_buffer.cpp  vbo_vao.cpp  view_normals.cpp
code/easycppogl-master/Test/: CMakeLists.txt  test_compute.cpp  test_fbo.cpp  test_mesh.cpp  test_shader.cpp  test_ssbo.cpp  test_ubo.cpp  test_vao_vbo.cpp
code/easycppogl-master/Test/Shaders/: shader2.frag  shader2.vert
code/easycppogl-master/Tuto/: CMakeLists.txt  tuto2_ex1.cpp  tuto2_ex2.cpp  tuto2_ex3.cpp  tuto2_ex4.cpp  tuto3_ex1.cpp  tuto3_ex2.cpp  tuto3_ex3.cpp  tuto4_ex1.cpp  tuto4_ex2.cpp
